--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -24,7 +24,7 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
     strategy:
         matrix:
-            python-version: ['3,10','3.11','3.12']
+            python-version: ['3.11','3.12']
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
