--- a/.github/workflows/codacy.yml
+++ b/.github/workflows/codacy.yml
@@ -42,6 +42,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    
+
+    - name: Security audit with pip-audit
+      run: |
+        pip install pip-audit
+        pip-audit
 
     - name: Upload coverage to Codacy
       run: |
