deploy if pr closed and merged

--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -1,16 +1,17 @@
 name: Deploy to Render
 
 on:
-    push:
-      branches:
-        - main
     pull_request:
       branches:
         - main
+      types:
+        - closed
 
 jobs:
 
   deploy:
+
+    if: github.event.pull_request.merged == true
     name: Deploy to Render
     runs-on: ubuntu-latest
     steps:
