--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -6,20 +6,61 @@ on:
         - main
       types:
         - closed
-
 jobs:
+    pytest:
+        runs-on: ubuntu-latest
+          
+        services:
+            mysql:
+                image: mysql:5.7
+                env:
+                    MYSQL_ROOT_PASSWORD: uvlhub_root_password
+                    MYSQL_DATABASE: uvlhubdb_test
+                    MYSQL_USER: uvlhub_user
+                    MYSQL_PASSWORD: uvlhub_password
+                ports:
+                    - 3306:3306
+                options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+          
+        steps:
+            - uses: actions/checkout@v4
+          
+            - uses: actions/setup-python@v5
+              with:
+                python-version: '3.12'
+          
+            - name: Prepare environment
+              run: |
+                sed -i '/rosemary @ file:\/\/\/app/d' requirements.txt
+          
+            - name: Install dependencies
+              run: |
+                python -m pip install --upgrade pip
+                pip install -r requirements.txt
+          
+            - name: Run Tests
+              env:
+                FLASK_ENV: testing
+                MARIADB_HOSTNAME: 127.0.0.1
+                MARIADB_PORT: 3306
+                MARIADB_TEST_DATABASE: uvlhubdb_test
+                MARIADB_USER: uvlhub_user
+                MARIADB_PASSWORD: uvlhub_password
+              run: |
+                pytest app/modules/ --ignore-glob='*selenium*'
+            
 
-  deploy:
+    deploy:
+        name: Deploy to Render
+        runs-on: ubuntu-latest
+        needs: pytest
+        if: github.event.pull_request.merged == true && success()
+        steps:
+            - name: Check out the repo
+              uses: actions/checkout@v4
 
-    if: github.event.pull_request.merged == true
-    name: Deploy to Render
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out the repo
-        uses: actions/checkout@v4
-
-      - name: Deploy to Render
-        env:
-          deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
-        run: |
-          curl "$deploy_url"
+            - name: Deploy to Render
+              env:
+                    deploy_url: ${{ secrets.RENDER_DEPLOY_HOOK_URL }}
+              run: |
+                    curl "$deploy_url"
