--- a/.github/workflows/render.yml
+++ b/.github/workflows/render.yml
@@ -1,11 +1,9 @@
 name: Deploy to Render
 
 on:
-    pull_request:
-      branches:
-        - main
-      types:
-        - closed
+    push:
+        tags:
+            - '*'
 jobs:
     pytest:
         runs-on: ubuntu-latest
@@ -54,7 +52,7 @@ jobs:
         name: Deploy to Render
         runs-on: ubuntu-latest
         needs: pytest
-        if: github.event.pull_request.merged == true && success()
+        if: success()
         steps:
             - name: Check out the repo
               uses: actions/checkout@v4
